--- a/app/form-1.html
+++ b/app/form-1.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="format-detection" content="telphone=no, email=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="single-header">
 <div class="header">
     <h1>发起组团</h1>
+    <a href="#" class="back"></a>
     <div class="control">
         <a class="button button-white button-small" href="gdlp-1.html">更多楼盘</a>
     </div>
@@ -29,7 +29,7 @@
                 <input type="text" placeholder="请输入手机号码">
             </div>
             <div class="form-row">
-                <a href="#" class="button button-large">我要组团</a>
+                <input type="button" class="button button-large" value="我要组团">
             </div>
         </div>
         <div class="flex-1 form-info">
@@ -66,6 +66,8 @@
         </div>
     </div>
 </div>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="scripts/common.js"></script>
 <script>
     $("#txtBuilding").on("click", function(e) {
         $("#buildingModal").addClass("on");
