--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 <div class="top-menu">
     <div class="top-menu-list">
         <a href="fangtuan.html">组团看房</a>
-        <a href="#">交流互动</a>
+        <a href="gdlp.html">交流互动</a>
         <a href="huodong.html">往期看房</a>
     </div>
     <div class="top-bak"></div>
@@ -26,6 +26,7 @@
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/requirejs/require.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
