--- a/app/form-search-no-result.html
+++ b/app/form-search-no-result.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="format-detection" content="telphone=no, email=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="single-header">
 <div class="header">
-    <div class="msg">您所参加的看房团楼盘是：华府壹区</div>
+    <div class="msg">未找到符合条件的楼盘</div>
+    <div class="control">
+        <a class="button button-white button-small go-back" href="#">重新搜索</a>
+    </div>
 </div>
 <div class="wrap-page form-wrap">
     <div class="box-v form">
         <div class="flex-2">
+            <div class="form-row form-row-line form-row-icon icon-building">
+                <input type="text" placeholder="请输入楼盘名称">
+            </div>
             <div class="form-row form-row-line form-row-icon icon-user">
                 <input type="text" placeholder="请输入您的姓名">
             </div>
@@ -23,17 +28,20 @@
                 <input type="text" placeholder="请输入手机号码">
             </div>
             <div class="form-row">
-                <a href="#" class="button button-large">立即报名</a>
+                <a href="#" class="button button-large">我要组团</a>
             </div>
         </div>
         <div class="flex-1 form-info">
-            <p>参与我爱买房网看房团，感觉自己萌萌哒</p>
-            <p>请准确填写以上预约信息，我们会有专人与您联系！</p>
+            <p>5人抱成团，就有免费专车带您看房！</p>
+            <p>请您准确填写以上预约信息，我们会有专人联系您！</p>
         </div>
     </div>
 </div>
-<script>
-
-</script>
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/requirejs/require.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 </body>
 </html>
