--- a/app/gdlp-2.html
+++ b/app/gdlp-2.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="format-detection" content="telphone=no, email=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="kf no-footer kf-result">
 <div class="header kf-header">
     <h1>枫桥紫郡</h1>
     <div class="control">
-        <a class="button button-white button-small" href="#">重新搜索</a>
+        <a class="button button-white button-small go-back" href="#">重新搜索</a>
     </div>
 </div>
 <div class="wrap-page">
@@ -44,112 +43,43 @@
             </div>
         </div>
         <div class="result-divide">猜您喜欢：</div>
-        <div class="list">
-            <div class="card card-1 img-tip">
-                <div class="tip">现有房团</div>
-                <div class="box">
-                    <div class="flex-1">
-                        <img class="img-border img-border-padding img-max-101" src="images/pic101-75.jpg" alt="">
-                    </div>
-                    <div class="flex-1 text-align-left">
-                        <p>枫桥紫郡</p>
-                        <p>徐汇区 枫阳路1811弄</p>
-                        <p>
-                            <span class="il-b">现房</span>
-                            <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
-                        </p>
-                    </div>
-                    <div class="flex-1 text-align-right c1-d3">
-                        <p class="text-16 text-orange">￥7500</p>
-                        <p class="text-orange">元/平米</p>
-                    </div>
-                </div>
+        <div class="list"></div>
+    </div>
+</div>
+<script type="text/html" id="lp-list">
+    <div class="card card-1 img-tip">
+        <div class="tip">{{tips}}</div>
+        <div class="box">
+            <div class="flex-1">
+                <img class="img-border img-border-padding img-max-101" src="{{src}}" alt="">
             </div>
-            <div class="card card-1 img-tip">
-                <div class="tip">现有房团</div>
-                <div class="box">
-                    <div class="flex-1">
-                        <img class="img-border img-border-padding img-max-101" src="images/pic101-75.jpg" alt="">
-                    </div>
-                    <div class="flex-1 text-align-left">
-                        <p>枫桥紫郡</p>
-                        <p>徐汇区 枫阳路1811弄</p>
-                        <p>
-                            <span class="il-b">现房</span>
-                            <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
-                        </p>
-                    </div>
-                    <div class="flex-1 text-align-right c1-d3">
-                        <p class="text-16 text-orange">￥75000</p>
-                        <p class="text-orange">元/平米</p>
-                    </div>
-                </div>
+            <div class="flex-1 text-align-left">
+                <p>{{house}}</p>
+                <p>{{address}}</p>
+                <p>
+                    <span class="il-b">{{mold}}</span>
+                    <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
+                </p>
             </div>
-            <div class="card card-1 img-tip">
-                <div class="tip">现有房团</div>
-                <div class="box">
-                    <div class="flex-1">
-                        <img class="img-border img-border-padding img-max-101" src="images/pic101-75.jpg" alt="">
-                    </div>
-                    <div class="flex-1 text-align-left">
-                        <p>枫桥紫郡</p>
-                        <p>徐汇区 枫阳路1811弄</p>
-                        <p>
-                            <span class="il-b">现房</span>
-                            <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
-                        </p>
-                    </div>
-                    <div class="flex-1 text-align-right c1-d3">
-                        <p class="text-16 text-orange">￥7500</p>
-                        <p class="text-orange">元/平米</p>
-                    </div>
-                </div>
+            <div class="flex-1 text-align-right c1-d3">
+                <p class="text-16 text-orange">￥{{price}}</p>
+                <p class="text-orange">元/平米</p>
             </div>
         </div>
     </div>
-</div>
+</script>
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/requirejs/require.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 <script>
-    var nav = $(".nav");
-    var menu = $(".nav-list");
-    var body = $("body");
-    var menuTarget;
-    nav.on("click", "a", function(e) {
-        var target = $(e.target);
-        menuTarget = target;
-        if(target.hasClass("active")) {
-            closeMenu();
-        } else {
-            openMenu();
-        }
-        e.preventDefault();
+    require([
+        "scripts/common"
+    ], function() {
+
     });
-
-    menu.on("click", "li", function(e) {
-        var condition = $(e.target).html();
-        if(condition == "不限") {
-            menuTarget.html(menuTarget.data("title"));
-            menuTarget.removeClass("on-condition");
-        } else {
-            menuTarget.html(condition);
-            menuTarget.addClass("on-condition");
-        }
-        closeMenu();
-    });
-
-    function openMenu() {
-        menuTarget.siblings().removeClass("active");
-        nav.addClass("menu-on");
-        menu.addClass("on");
-        body.addClass("lock");
-        menuTarget.addClass("active");
-    }
-
-    function closeMenu() {
-        nav.removeClass("menu-on");
-        menu.removeClass("on");
-        body.removeClass("lock");
-        menuTarget.removeClass("active");
-    }
 </script>
 </body>
 </html>
