--- a/app/huodong-2.html
+++ b/app/huodong-2.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <meta name="format-detection" content="telphone=no, email=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body class="hd">
 <div class="header hd-header">
@@ -37,8 +36,11 @@
 <div class="footer hd-footer">
     <a href="#" class="button-3d">现有房团</a>
 </div>
-<script>
-
-</script>
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/requirejs/require.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 </body>
 </html>
