--- a/app/fangtuan.html
+++ b/app/fangtuan.html
@@ -20,6 +20,7 @@
     </div>
     <div id="list-page" class="page">
         <div class="list screening-data"></div>
+        <div class="load-more"></div>
     </div>
     <div id="empty-page" class="page page-empty page-disabled">
         <div class="flex-1"></div>
