--- a/app/gdlp-2.html
+++ b/app/gdlp-2.html
@@ -21,26 +21,28 @@
             刷新刷新
         </div>
         <div class="list">
-            <div class="card card-1 img-tip">
-                <div class="tip">现有房团</div>
-                <div class="box">
-                    <div class="flex-1">
-                        <img class="img-border img-border-padding img-max-101" src="images/pic101-75.jpg" alt="">
-                    </div>
-                    <div class="flex-1 text-align-left">
-                        <p>枫桥紫郡</p>
-                        <p>徐汇区 枫阳路1811弄</p>
-                        <p>
-                            <span class="il-b">现房</span>
-                            <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
-                        </p>
-                    </div>
-                    <div class="flex-1 text-align-right c1-d3">
-                        <p class="text-16 text-orange">￥7500</p>
-                        <p class="text-orange">元/平米</p>
+            <a href="loupan-1.html">
+                <div class="card card-1 img-tip">
+                    <div class="tip">现有房团</div>
+                    <div class="box">
+                        <div class="flex-1">
+                            <img class="img-border img-border-padding img-max-101" src="images/pic101-75.jpg" alt="">
+                        </div>
+                        <div class="flex-1 text-align-left">
+                            <p>枫桥紫郡</p>
+                            <p>徐汇区 枫阳路1811弄</p>
+                            <p>
+                                <span class="il-b">现房</span>
+                                <span class="il-b"><span class="badge">11号线</span><span class="badge">外环以外</span></span>
+                            </p>
+                        </div>
+                        <div class="flex-1 text-align-right c1-d3">
+                            <p class="text-16 text-orange">￥7500</p>
+                            <p class="text-orange">元/平米</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="result-divide">猜您喜欢：</div>
         <div class="list"></div>
