--- a/app/loupan-2.html
+++ b/app/loupan-2.html
@@ -154,8 +154,30 @@
 </div>
 <div class="footer lp-footer">
     <div class="nav">
-        <a class="icon-register" href="#">立即预约</a>
-        <a class="icon-house" href="#">现有房团</a>
+        <a class="icon-register" href="#callModal">立即预约</a>
+        <a class="icon-house" href="fangtuan.html">现有房团</a>
+    </div>
+</div>
+<div id="callModal" class="modal">
+    <div class="tips box-v">
+        <div class="flex-1"></div>
+        <div class="flex-1">
+            <div class="tips-title">
+                <h2>提示</h2>
+            </div>
+            <div class="tips-msg">
+                <p>确定拨打电话：400-021-0655吗？</p>
+            </div>
+            <div class="tips-control">
+                <div>
+                    <a href="#" class="button-circle button-red modal-close">取消</a>
+                </div>
+                <div>
+                    <a href="tel:4000210655" class="button-circle button-green">确定</a>
+                </div>
+            </div>
+        </div>
+        <div class="flex-1"></div>
     </div>
 </div>
 <!-- build:js(.) scripts/vendor.js -->
