--- a/app/gdlp.html
+++ b/app/gdlp.html
@@ -23,6 +23,7 @@
     </div>
     <div class="page">
         <div class="list screening-data"></div>
+        <div class="load-more"></div>
     </div>
     <div id="empty-page" class="page page-empty page-disabled">
         <div class="flex-1"></div>
