--- a/app/fangtuan.html
+++ b/app/fangtuan.html
@@ -15,9 +15,7 @@
 </div>
 <ul class="nav-list screening-list"></ul>
 <div class="wrap-page">
-    <div class="reload">
-        刷新刷新
-    </div>
+    <div class="reload"><!-- 刷新栏预留 --></div>
     <div id="list-page" class="page">
         <div class="list screening-data"></div>
         <div class="load-more"></div>
