--- a/app/huodong.html
+++ b/app/huodong.html
@@ -13,6 +13,7 @@
     <h1 class="list-h">往期看房</h1>
 </div>
 <div class="wrap-page">
+    <div class="reload"><!-- 刷新栏预留 --></div>
     <div class="page">
         <div class="list list-center-line"></div>
         <div class="load-more"></div>
